---------------------
subunit release notes
---------------------

NEXT (In development)
---------------------

0.0.14
------

BUG FIXES
~~~~~~~~~

* Memoryview detection was broken and thus it's use was never really tested.
  (Robert Collins, 1216101)

* TestProtocol2's tag tests were set sort order dependent.
  (Robert Collins, #1025392)

* TestTestProtocols' test_tags_both was set sort order dependent.
  (Robert Collins, #1025392)

* TestTestProtocols' test_*_details were dictionary sort order dependent.
  (Robert Collins, #1025392)

* TestSubUnitTags's test_add_tag was also se sort order dependent.
  (Robert Collins, #1025392)

0.0.13
------

IMPROVEMENTS
~~~~~~~~~~~~

* subunit should now build with automake 1.11 again. (Robert Collins)

* `subunit-stats` no longer outputs encapsulated stdout as subunit.
  (Robert Collins, #1171987)

* The logic for `subunit.run` is now importable via python -
  `subunit.run.main`. (Robert Collins, #606770)

BUG FIXES
~~~~~~~~~

* Removed GPL files that were (C) non Subunit Developers - they are
  incompatible for binary distribution, which affects redistributors.
  (Robert Collins, #1185591)

0.0.12
------

BUG FIXES
~~~~~~~~~

* Subunit v2 packets with both file content and route code were not being
  parsed correctly - they would incorrectly emit a parser error, due to trying
  to parse the route code length from the first byes of the file content.
  (Robert Collins, 1172815)

0.0.11
------

v2 protocol draft included in this release. The v2 protocol trades off human
readability for a massive improvement in robustness, the ability to represent
concurrent tests in a single stream, cheaper parsing, and that provides
significantly better in-line debugging support and structured forwarding
of non-test data (such as stdout or stdin data).

This change includes two new filters (subunit-1to2 and subunit-2to1). Use
these filters to convert old streams to v2 and convert v2 streams to v1.
